  (Ian Clatworthy, Brian de Alwis, #355280)

* Non-recursive ``bzr ls`` now works properly when a path is specified.
  (Jelmer Vernooij, #357863)

Documentation
*************

API Changes
***********

Internals
*********

* ``bzrlib.branch.Branch.set_parent`` is now present on the base branch
  class and will call ``_set_parent_location`` after doing unicode 
  encoding. (Robert Collins)

* ``bzrlib.bzrdir.BzrDir._get_config`` now returns a ``TransportConfig``
  or similar when the dir supports configuration settings. The base class
  defaults to None. There is a matching new server verb
  ``BzrDir.get-config_file`` to reduce roundtrips for getting BzrDir
  configuration. (Robert Collins)

* ``bzrlib.tests.ExtendedTestResult`` has new methods ``startTests``
  called before the first test is started, ``done`` called after the last
  test completes, and a new parameter ``strict``. (Robert Collins)

* Fallback ``CredentialStore`` instances registered with ``fallback=True``
  are now be able to provide credentials if obtaining credentials 
  via ~/.bazaar/authentication.conf fails. (Jelmer Vernooij, 
  Vincent Ladeuil, #321918)

bzr 1.14rc1
###########
:Codename: brisbane-core
:1.14rc1: 2009-04-06

New formats 1.14 and 1.14-rich-root supporting End-Of-Line (EOL) conversions,
keyword templating (via the bzr-keywords plugin) and generic content filtering.
End-of-line conversion is now supported for formats supporting content
filtering.

Compatibility Breaks
********************

* A previously disabled code path to accelerate getting configuration
  settings from a smart server has been reinstated. We think this *may*
  cause a incompatibility with servers older than bzr 0.15. We intend
  to issue a point release to address this if it turns out to be a
  problem. (Robert Collins, Andrew Bennetts)

* bzr no longer autodetects nested trees as 'tree-references'.  They
  must now be explicitly added tree references.  At the commandline, use