@@ -237,6 +237,17 @@ class SmartServerBranchRequestSetLastRevisionInfo(SmartServerSetTipRequest):
         return SuccessfulSmartServerResponse(('ok',))
 
 
+class SmartServerBranchRequestSetParentLocation(SmartServerLockedBranchRequest):
+    """Set the parent location for a branch.
+    
+    Takes a location to set, which must be utf8 encoded.
+    """
+
+    def do_with_locked_branch(self, branch, location):
+        branch._set_parent_location(location)
+        return SuccessfulSmartServerResponse(())
+
+
 class SmartServerBranchRequestLockWrite(SmartServerBranchRequest):
 
     def do_with_branch(self, branch, branch_token='', repo_token=''):
